Added response entities, dockerfile and file readme; updated paths for requests and swagger.
