# internal/handler/car_handler.go
@@ -1,8 +1,11 @@
 package handler
 
 import (
-	user "car-api/internal/core/domain"
+	"car-api/internal/core/domain"
+	enums "car-api/internal/core/emuns"
 	"car-api/internal/core/ports"
+	"fmt"
+
 	"github.com/gofiber/fiber/v2"
 )
 
@@ -17,11 +20,13 @@ type CarHandler struct {
 // @Accept json
 // @Produce json
 // @Param request body domain.Car true "Create Car Data"
-// @Success 200 {string} status "ok"
+// @Success 200 {object} domain.Message
+// @Success 400 {object} domain.MessageError
+// @Success 500 {object} domain.MessageError
 // @Security ApiKeyAuth
-// @Router /v1/cars/create [post]
+// @Router /cars [post]
 func (ch *CarHandler) Save(c *fiber.Ctx) error {
-	var car user.Car
+	var car domain.Car
 	err := c.BodyParser(&car)
 	if err != nil {
 		return fiber.NewError(400, "cannot parse params")
@@ -32,9 +37,8 @@ func (ch *CarHandler) Save(c *fiber.Ctx) error {
 		return fiber.NewError(404, "cannot create a car")
 	}
 
-	return c.JSON(fiber.Map{
-		"error": false,
-		"msg":   "car added",
+	return c.JSON(domain.Message{
+		Message: fmt.Sprintf("%s %s %s", enums.Created, enums.Successfully, enums.Car),
 	})
 }
 
@@ -44,8 +48,10 @@ func (ch *CarHandler) Save(c *fiber.Ctx) error {
 // @Tags Car
 // @Accept json
 // @Produce json
-// @Success 200 {array} user.Car
-// @Router /v1/cars/all [get]
+// @Success 200 {object} domain.Message
+// @Success 400 {object} domain.MessageError
+// @Success 500 {object} domain.MessageError
+// @Router /cars [get]
 func (ch *CarHandler) GetAll(c *fiber.Ctx) error {
 
 	cars, err := ch.carService.GetAll()
@@ -54,11 +60,11 @@ func (ch *CarHandler) GetAll(c *fiber.Ctx) error {
 		return fiber.NewError(400, "cannot get all car")
 	}
 
-	return c.JSON(fiber.Map{
-		"error": false,
-		"msg":   "cars obtained",
-		"cars":  cars,
+	return c.JSON(domain.Message{
+		Message: fmt.Sprintf("%s %s %s", enums.Loaded, enums.Successfully, enums.Cars),
+		Data:    cars,
 	})
+
 }
 
 // GetOne method for get one car.
@@ -68,8 +74,10 @@ func (ch *CarHandler) GetAll(c *fiber.Ctx) error {
 // @Accept json
 // @Produce json
 // @Param id path string true "Car ID"
-// @Success 200 {object} user.Car
-// @Router /v1/cars/find/{id} [get]
+// @Success 200 {object} domain.Message
+// @Success 400 {object} domain.MessageError
+// @Success 500 {object} domain.MessageError
+// @Router /cars/{id} [get]
 func (ch *CarHandler) GetOne(c *fiber.Ctx) error {
 	id := c.Params("id")
 	if id == "" {
@@ -82,10 +90,9 @@ func (ch *CarHandler) GetOne(c *fiber.Ctx) error {
 		return fiber.NewError(400, "cannot get one car")
 	}
 
-	return c.JSON(fiber.Map{
-		"error": false,
-		"msg":   "Get one car",
-		"car":   car,
+	return c.JSON(domain.Message{
+		Message: fmt.Sprintf("%s %s %s", enums.Loaded, enums.Successfully, enums.Car),
+		Data:    car,
 	})
 }
 
@@ -97,9 +104,11 @@ func (ch *CarHandler) GetOne(c *fiber.Ctx) error {
 // @Produce json
 // @Param id path string true "Car ID"
 // @Param request body domain.Car true "Update Car Data"
-// @Success 200 {string} status "ok"
+// @Success 200 {object} domain.Message
+// @Success 400 {object} domain.MessageError
+// @Success 500 {object} domain.MessageError
 // @Security ApiKeyAuth
-// @Router /v1/cars/update/{id} [put]
+// @Router /cars/{id} [put]
 func (ch *CarHandler) Update(c *fiber.Ctx) error {
 	id := c.Params("id")
 
@@ -107,7 +116,7 @@ func (ch *CarHandler) Update(c *fiber.Ctx) error {
 		return fiber.NewError(400, "cannot parse ID")
 	}
 
-	var car user.Car
+	var car domain.Car
 	err := c.BodyParser(&car)
 
 	if err != nil {
@@ -120,9 +129,8 @@ func (ch *CarHandler) Update(c *fiber.Ctx) error {
 		return fiber.NewError(400, "cannot update a car")
 	}
 
-	return c.JSON(fiber.Map{
-		"error": false,
-		"msg":   "A car was updated",
+	return c.JSON(domain.Message{
+		Message: fmt.Sprintf("%s %s %s", enums.Updated, enums.Successfully, enums.Car),
 	})
 }
 
@@ -133,9 +141,11 @@ func (ch *CarHandler) Update(c *fiber.Ctx) error {
 // @Accept json
 // @Produce json
 // @Param id path string true "Car ID"
-// @Success 200 {string} status "ok"
+// @Success 200 {object} domain.Message
+// @Success 400 {object} domain.MessageError
+// @Success 500 {object} domain.MessageError
 // @Security ApiKeyAuth
-// @Router /v1/cars/delete/{id} [delete]
+// @Router /cars/{id} [delete]
 func (ch *CarHandler) Delete(c *fiber.Ctx) error {
 	id := c.Params("id")
 	if id == "" {
@@ -148,9 +158,8 @@ func (ch *CarHandler) Delete(c *fiber.Ctx) error {
 		return fiber.NewError(400, "cannot delete car")
 	}
 
-	return c.JSON(fiber.Map{
-		"error": false,
-		"msg":   "Delete one car",
+	return c.JSON(domain.Message{
+		Message: fmt.Sprintf("%s %s %s", enums.Deleted, enums.Successfully, enums.Car),
 	})
 }
 
